perf: 조회 속도 약 70% 개선 (#89)